--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
       "webpack-cli": "^4.9.1"
    },
    "dependencies": {
+      "ajv": "^8.8.0",
       "bcrypt": "^5.0.1",
       "body-parser": "^1.18.1",
       "dotenv": "^10.0.0",
