--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
       "@types/bcrypt": "^5.0.0",
       "@types/dotenv": "^8.2.0",
       "@types/express": "^4.17.13",
+      "@types/jest": "^27.0.2",
       "@types/jsonwebtoken": "^8.5.5",
       "@types/node": "^8.0.29",
       "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -37,6 +38,7 @@
       "eslint": "^8.2.0",
       "eslint-config-airbnb-base": "^15.0.0",
       "eslint-plugin-import": "^2.25.3",
+      "jest": "^27.3.1",
       "nodemon": "^2.0.15",
       "prettier": "^2.4.1",
       "ts-jest": "^27.0.7",
